--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<html lang="ja">
- <head>
-  <title>HelloWorld</title>
-  <meta charset="utf-8">
- </head>
- <body>
-  Hello testcreatek
- </body>
+  <head></head>
+  <body>
+    <p>ここにHTMLの文章などが入ります</p>
+    <script type="text/javascript" src="index.js"></script>
+  </body>
 </html>
