--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head></head>
   <body>
-    <p>ここにHTMLの文章などが入ります</p>
+    <p>Test</p>
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
