--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head></head>
   <body>
     <p>Test213</p>
+    <br/>
+    <p>サンプル</p>　<a href="./test.php">testhello</a>
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
