--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<?php
-echo 'test';
-echo 'Current PHP version: ' . phpversion();
+<!DOCTYPE html>
+  <head></head>
+  <body>
+    <p>Test213</p>
+    <br/>
+    <p>test</p>　<a href="./test.php">testhello</a>
+    <p>index</p>　<a href="./index.php">testhello</a>
+    <script type="text/javascript" src="index.js"></script>
+  </body>
+</html>
