--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <p>Test213</p>
     <br/>
     <p>test</p>　<a href="./test.php">testhello</a>
+    <p>test2</p>　<a href="./test2.php">testhello</a>
     <p>index</p>　<a href="./index.php">testhello</a>
     <script type="text/javascript" src="index.js"></script>
   </body>
