--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
   <head></head>
   <body>
-    <p>Test213</p>
+    <p>Coming Soon　「RICOH Live Streaming API Web Site」</p>
     <br/>
-    <p>test</p>　<a href="./test.php">testhello</a>
-    <p>test2</p>　<a href="./test2.php">testhello</a>
-    <p>index</p>　<a href="./index.php">testhello</a>
+    /**<p>test</p>　<a href="./test.php">testhello</a>**/
+    /**<p>test2</p>　<a href="./test2.php">testhello</a>**/
+    /**<p>index</p>　<a href="./index.php">testhello</a>**/
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
